--- a/app/templates/platform/buttons/action_button.html
+++ b/app/templates/platform/buttons/action_button.html
@@ -1,29 +1,87 @@
 {% load i18n %}
 
 {% if not off %}
-  {% with button_class="btn-pm btn-pm-sm" %}
-    
+
     {% if modals.register.load and checks %}
-        <a href="#" class="{{ button_class }}" data-toggle="modal" data-target="#{{ modals.register.name }}">
+        <a 
+          {{ button_attrs }}
+          {% if button_id %} id="{{ button_id }}" {% endif %}  
+          href="#" 
+          class="{{ button_class }} {% if active_class %}{{ active_class }}{% endif %} {% if button_icon %} icofont-{{ button_icon }} {% endif %}"
+          data-toggle="modal" 
+          data-target="#{{ modals.register.name }}"
+        >
         {% if button_icon %}<i class="icofont-{{ button_icon }}"></i>{% endif %} {{ button_prefix }} {{ button_text }} {{ button_suffix }}
         </a>
     {% elif modals.need_role.load and checks  %}
-        <a href="#" class="{{ button_class }}" data-toggle="modal" data-target="#{{ modals.need_rol.name }}">
+        <a 
+          {{ button_attrs }}
+          {% if button_id %} id="{{ button_id }}" {% endif %}  
+          href="#" 
+          class="{{ button_class }} {% if active_class %}{{ active_class }}{% endif %} {% if button_icon %} icofont-{{ button_icon }} {% endif %}"
+          data-toggle="modal" 
+          data-target="#{{ modals.need_rol.name }}"
+        >
             {% if button_icon %}<i class="icofont-{{ button_icon }}"></i>{% endif %} {{ button_prefix }} {{ button_text }} {{ button_suffix }}
         </a>
     {% elif modals.verification.load and checks  %}
-        <a href="#" class="{{ button_class }}" data-toggle="modal" data-target="#{{ modals.verification.name }}">
+        <a
+          {{ button_attrs }}
+          {% if button_id %} id="{{ button_id }}" {% endif %}   
+          href="#" 
+          class="{{ button_class }} {% if active_class %}{{ active_class }}{% endif %} {% if button_icon %} icofont-{{ button_icon }} {% endif %}" 
+          data-toggle="modal" 
+          data-target="#{{ modals.verification.name }}"  
+        >
             {% if button_icon %}<i class="icofont-{{ button_icon }}"></i>{% endif %} {{ button_prefix }} {{ button_text }} {{ button_suffix }}
         </a>
     {% elif modals.need_verification.load and checks  %}
-        <a href="#" class="{{ button_class }}" data-toggle="modal" data-target="#{{ modals.need_verification.name }}">
+        <a 
+          {{ button_attrs }}
+          {% if button_id %} id="{{ button_id }}" {% endif %}  
+          href="#" class="{{ button_class }} {% if active_class %}{{ active_class }}{% endif %} {% if button_icon %} icofont-{{ button_icon }} {% endif %}" 
+          data-toggle="modal" 
+          data-target="#{{ modals.need_verification.name }}"
+            
+        >
             {% if button_icon %}<i class="icofont-{{ button_icon }}"></i>{% endif %}  {{ button_prefix }} {{ button_text }} {{ button_suffix }}
         </a>
     {% else %}
-        <a href="{{ button_url }}" class="{{ button_class }}">
-            {% if button_icon %}<i class="icofont-{{ button_icon }}"></i>{% endif %} {{ button_prefix }} {{ button_text }} {{ button_suffix }}
+       
+        <a 
+          {{ button_attrs }}
+          {% if button_id %} id="{{ button_id }}" {% endif %}  
+
+          class="{{ button_class }} {% if active_class %}{{ active_class }}{% endif %} "
+ 
+          {% if button_url %}
+            href="{{ button_url }}"
+          {% endif %}
+          
+          {% if button_actions.onclick %}
+            onclick="{{ button_actions.onclick.name }}(event, '{{ button_actions.onclick.param }}' {% if button_actions.onclick.param2 %}, '{{ button_actions.onclick.param2 }}' {% endif %})"
+          {% endif %}
+        
+          {% if button_action.onclick %}
+            onclick="{{ button_action.name }}(event, '{{ button_action.param }}' {% if button_action.param2 %}, '{{ button_action.param2 }}' {% endif %})"
+          {% elif button_action.modal %}
+            data-toggle="modal" 
+            data-target="#{{ button_action.name }}"
+          {% else %}
+                
+          {% endif %}
+
+          
+        >
+          {% if button_icon %}
+            <i class="icofont-{{ button_icon }}"></i>
+          {% endif %} 
+          
+          {{ button_prefix }} {{ button_text }} {{ button_suffix }}
         </a>
+        
+
     {% endif %}
 
-  {% endwith %}
+
 {% endif %}
