--- a/app/templates/platform/navigation/_nav_coach.html
+++ b/app/templates/platform/navigation/_nav_coach.html
@@ -3,7 +3,7 @@
 {% load playmaker %}
 
 {% if user.is_authenticated %}
-    <li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Ogłoszenia' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="{% url 'marketplace:announcements'%}">{% trans 'Testy piłkarskie' %}</a></li>
     <li class="nav-item"><a class="nav-link" href="{% url 'profiles:my_requests'%}">{% trans 'Zapytania' %}{% include 'platform/navigation/_nav_badge_requests.html' %} </a></li>
     {% include 'platform/navigation/_nav.html'%}
     <li class="nav-item">{% get_my_team_link css_class='nav-link' %}</li>
