--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -17,10 +17,13 @@
 }
 #marketplace .announcement-card {
     /*border-left: 5px solid #e03a3c;*/
+    padding: .7rem;
 }
- #marketplace .announcement-card .card-body {
-    
- } 
+
+#marketplace .announcement-card .card-body {
+    padding: .6rem 0rem;
+}
+
 #marketplace .announcement-card .sub-title {
 
     font-size: .5rem;
@@ -75,8 +78,8 @@
     right: 0px;
     z-index: 0;
     content: " ";
-    width: 120px;
-    height: 120px;
+    width: 100px;
+    height: 100px;
     background: #f5f5f5;
     border-bottom-left-radius: 136px;
     transition: all 0.4s ease-in-out;
@@ -132,8 +135,8 @@
     height: 3px;
     background: #e76668;
     border-radius: 25%;
-    margin-top: 15px;
-    margin-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 2px;
 }
 
 .serv-section-2 p {
