--- a/backend/static/assets/css/circle.css
+++ b/backend/static/assets/css/circle.css
@@ -12,7 +12,22 @@
     background: none;
     position: relative;
   }
-  
+
+@media all and (max-width: 768px) {
+  .progress-circle {
+    width: 80px;
+    height: 80px;
+  }
+  .season-numbers {
+    font-size: 1rem;
+  }
+  .circle-title {
+    min-height: 39px;
+    font-size: .8rem;
+  }
+
+
+}
   .progress-circle::after {
     content: "";
     width: 100%;
@@ -73,5 +88,17 @@
     position: absolute;
     top: 0;
     left: 0;
+
   }
   
+
+.progress-circle-text {
+  margin-bottom: 0px;
+  font-size:1.5rem;
+}
+
+@media all and (max-width: 768px) {
+  .progress-circle-text {
+    font-size:1.1rem;
+  }
+}
