--- a/backend/static/assets/css/tables.css
+++ b/backend/static/assets/css/tables.css
@@ -99,6 +99,12 @@ section.tables {
     transition: background-color 430ms linear;
     
 } */
+.sc-cell {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column
+}
 
 @media all and (max-width: 768px) {   /* @todo to better understand 768px*/
     #tables .card-header {
