--- a/soccerbase/templates/soccerbase/tables/table_players_card.html
+++ b/soccerbase/templates/soccerbase/tables/table_players_card.html
@@ -100,7 +100,7 @@
                 {{ object.profile.display_league|default:'-'|title }}, {{ object.profile.display_voivodeship|default:''|lower|truncatechars:25 }}
             </div>
         </div>   
-                                                    <div class="d-none d-md-inline col-md-3">
+                                                    <div class="sc-cell d-none d-md-flex col-md-3">
                                                         <a href="{{ object.profile.get_permalink }}">
                                                             <img class="avatar rounded img-responsive"  src="{% thumbnail object.picture|default:'default_profile.png' 'tables_avatar_show_medium' %}">
 
@@ -115,29 +115,31 @@
                                                     </div>
 
 
-                                                        <div class="d-none d-md-inline col-5 col-md-1 text-left">
+                                                        <div class="sc-cell d-none d-md-flex col-5 col-md-1 text-left">
                                                             {{ object.profile.get_position_raw_display|default:''|title }}
                                                         </div >
                                                         
-                                                        <div class="d-none d-md-inline col-6 col-md-1 text-left">
+                                                        <div class="sc-cell d-none d-md-flex col-6 col-md-1 text-left">
                                                             {{ object.profile.display_league|default:''|title  }}
                                                         </div >
 
                                                     
 
-                                                        <div class="d-none d-md-inline col-5 col-md-2  text-left">
+                                                        <div class="sc-cell d-none d-md-flex col-5 col-md-2  text-left">
                                                             {{ object.profile.display_voivodeship|default:''|lower|truncatechars:25 }}
                                                         </div>
                                                         
-                                                        <div class="d-none d-md-inline col-6 col-md-2 text-left"> 
+                                                        <div class="sc-cell d-none d-md-flex col-6 col-md-2 text-left"> 
                                                             {{ object.profile.display_team|default:''|upper  }}
                                                         </div>
 
 
-                                                        <div class="d-none d-md-inline col-1 text-center">
-                                                            <span class="main-color">{{ object.profile.playermetrics.season_summary.team_goals|default:'0' }}</span> / 
-                                                            <span class="main-color">{{ object.profile.playermetrics.season_summary.games_played|default:'0' }}</span> / 
-                                                            <span class="main-color">{{ object.profile.playermetrics.season_summary.minutes_played |default:'0' }}</span> 
+                                                        <div class="sc-cell d-none d-md-flex col-1 text-center">
+                                                            <span>
+                                                                <span class="main-color">{{ object.profile.playermetrics.season_summary.team_goals|default:'0' }}</span> / 
+                                                                <span class="main-color">{{ object.profile.playermetrics.season_summary.games_played|default:'0' }}</span> / 
+                                                                <span class="main-color">{{ object.profile.playermetrics.season_summary.minutes_played |default:'0' }}</span> 
+                                                            </span>
                                                         </div>
 
 
@@ -157,7 +159,7 @@
             <span class="main-color">{{ object.profile.playermetrics.season_summary.minutes_played |default:'0' }}</span> <span class="d-md-none"> minuty</span>
         </div> {% endcomment %}
 
-        <div class="d-none d-md-inline col-md-2">
+        <div class="sc-cell d-none d-md-flex col-md-2">
             <span class="float-right"> 
                 {% profile_link object checks=False text="profil" %}
                 {% observed_link user object text=True %}
