--- a/profiles/templates/profiles/tables/_carrier_table.html
+++ b/profiles/templates/profiles/tables/_carrier_table.html
@@ -43,7 +43,7 @@
 
             <td class="d-none d-md-table-cell">{{ season.name }}</td>
             <td class="d-none d-md-table-cell">{{ season.team|upper }}</td>
-            <td class="d-none d-md-table-cell"> {{ season.league|upper }}</td>
+            <td class="d-none d-md-table-cell"> {{ season.league|title }}</td>
             <td class="">{{ season.first_squad_games_played }} / {{ season.games_played }}</td>
             {% if show_user.profile.is_goalkeeper %}
                 <td>{{ season.lost_goals }} </td>
