--- a/profiles/templates/profiles/requests.html
+++ b/profiles/templates/profiles/requests.html
@@ -45,7 +45,7 @@
                                     {% inquiry_display_name object %}
                                 </div>
 
-                                <div hidden class="d-md-none pull-right"> 
+                                <div class="d-md-none pull-right"> 
                                     {% if object.sender != user %}
                                         {% profile_link object.sender checks=False text='profil' %}
                                     {% else %}
@@ -89,10 +89,6 @@
                              
                                 {% include 'inquiries/partials/status.html' with object=object%}
 
-                                {% if object.is_active and tab.actions %}
-                                    {% update_request_button object accept=True %}
-                                    {% update_request_button object accept=False %}
-                                {% endif %}
                             </span>
                         </div>
                       
