--- a/marketplace/templates/marketplace/base.html
+++ b/marketplace/templates/marketplace/base.html
@@ -14,6 +14,7 @@
 <style>
 #marketplace{ 
     background-color:#F8F8F8;
+    padding: .2rem 0 93px 0;
 }
 #marketplace .announcement-card {
     /*border-left: 5px solid #e03a3c;*/
@@ -186,9 +187,9 @@
             {% endfor %}
             
         </div>
-        <div class="row">
-            {% include 'platform/partials/_pagination.html' with object_type='ogłoszeń' %}
-        </div>
+        
+        {% include 'platform/partials/_pagination.html' with object_type='ogłoszeń' %}
+        
  </div>
 </section>
 {% endblock %}
